5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1712_2499.log
== SUBMITION (2019-05-13 13:33:27) 
-- CODE:
from math import*
k=int(input())
e=0
i=0
while(i<k):
	e=e+(1/factorial(c))
	i=i+1
print(round(e,8))	
-- EXECUTION TIME:
0.12708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    e=e+(1/factorial(c))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:33:29) 
-- CODE:
from math import*
k=int(input())
e=0
i=0
while(i<k):
	e=e+(1/factorial(c))
	i=i+1
print(round(e,8))	
-- EXECUTION TIME:
0.145115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    e=e+(1/factorial(c))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:33:29) 
-- CODE:
from math import*
k=int(input())
e=0
i=0
while(i<k):
	e=e+(1/factorial(c))
	i=i+1
print(round(e,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    e=e+(1/factorial(c))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:35:14) 
-- CODE:
from math import*
k=int(input())
e=0
i=0
while(i<k):
	e=e+(1/factorial(i))
	i=i+1
print(round(e,8))	
-- EXECUTION TIME:
0.203169
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
